[CQF] Shard key with dotted path incorrectly populated in optimizer metadata

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • QO 2023-10-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The function which translates a string representing a path into an ABT iterates the string from left to right, when it should go right to left. This causes incorrect plans to be generated.

            Assignee:
            Ben Shteinfeld
            Reporter:
            Ben Shteinfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: