SERVER-81811 [CQF] Fix population of dotted shard key in optimizer metadata.

We were incorrectly translating the shard key into an ABT by iterating
over the string from left to right, rather than right to left. This is
because we build ABTs bottom up and must start with the last component
of a path.